2007-04-05  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-mesh-olpc.c
		- Change MPPREQ protocol port # to 16
		- Change MPPREQ anycast IP to 172.31.255.254

2007-04-05  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-mesh-olpc.c
		- (real_activation_failure_handler): switch adapter back to infrastructure
			mode when not activating a mesh

2007-04-05  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-mesh-olpc.c
		- Disable auto-ip and use DHCP for mesh interface configuration
		- Fix mesh activation scheme to work as described (was doing too many
			passes and channels)

2007-04-05  Dan Williams  <dcbw@redhat.com>

	* src/dhcp-manager/nm-dhcp-manager.c
		- (nm_dhcp_manager_begin_transaction): use timeout from activation
			request, if any, fall back to default timeout

2007-04-05  Dan Williams  <dcbw@redhat.com>

	* src/nm-activation-request.c
	  stc/nm-activation-request.h
		- (nm_act_request_get_dhcp_timeout_wait, nm_act_request_set_dhcp_timeout_wait):
			new functions; allow custom DHCP timeout

2007-04-05  Dan Williams  <dcbw@redhat.com>

	* src/NetworkManager.c
		- (fixup_hostname): ensure local hostname is first; write to a temp file
			then atomically rename to /etc/hosts

2007-04-04  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-mesh-olpc.c
		- convert nm_debug logging to nm_info so it shows up in /var/log/messages

2007-04-04  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-mesh-olpc.c
		- (mpp_discovery_receive_cb): clean up right after a successful response
			so only one MPP response is ever processed

2007-04-04  Dan Williams  <dcbw@redhat.com>

	* src/nm-device-802-11-mesh-olpc.c
		- (mpp_discovery_receive_cb): accept only one nameserver in MPP response

2007-04-04  Dan Williams  <dcbw@redhat.com>

	* src/nm-dbus-nmi.c
		- (nm_dbus_get_user_key_for_network_cb): accept security objects
			wrapped in structs, which later versions of python bindings pass back

2007-04-03  Dan Williams  <dcbw@redhat.com>
